@@ -24,10 +24,14 @@
 2005-01-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/image.c (DescribeImage): Report statistics for a virtual
+        gray channel for grayscale images rather than discrete red, green,
+        and blue.<BR>
+  <LI> PerlMagick/Makefile.nt: JNG and JP2 to test list.
   <LI> configure.ac: Changed --without-fpx to --with-fpx due to
         decision to default FlashPIX to 'no'.  FlashPIX library is not
         very portable and is only known to work properly under SPARC
-        Solaris.<BR>
+        Solaris and Windows.<BR>
   <LI> NEWS: Updated with latest news.
   <LI> lcms: Updated to LCMS 1.14.
 
